Add class ConfigurableNSGAIIDE and related runners